--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
-body {
-	background: url("../img/bg.png");
+/* Your Website Styles */
+
+
+/* Show Grid */
+.showgrid {
+	background: url("../img/grid-bg.png") repeat-y;
 }
